--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="./game.js"></script>
 </head>
 <body>
-    
+    <h1>Rock Paper Scissors</h1>
+    <div class="container">
+        <div class="score"></div>
+        <div class="message"></div>
+        <div class="buttons">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
+    </div>
 </body>
 </html>
