--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="./game.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
     <div class="container">
-        <div class="score"></div>
-        <div class="message"></div>
+        <div class="score">
+            <div>
+                <p>User</p>
+                <p>0</p>
+            </div>
+            <div>
+                <p>CPU</p>
+                <p>0</p>
+            </div>
+        </div>
+        <div class="message">Choose an option</div>
         <div class="buttons">
-            <button>Rock</button>
-            <button>Paper</button>
-            <button>Scissors</button>
+            <button>✊</button>
+            <button>🖐️</button>
+            <button>✌️</button>
         </div>
     </div>
 </body>
