--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="./game.js"></script>
+    <script src="./game.js" defer></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -23,9 +23,9 @@
         </div>
         <div class="message">Choose an option</div>
         <div class="buttons">
-            <button>✊</button>
-            <button>🖐️</button>
-            <button>✌️</button>
+            <button class="rock">✊</button>
+            <button class="paper">🖐️</button>
+            <button class="scissors">✌️</button>
         </div>
     </div>
 </body>
