Add query selectors for score and message boxes

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="score">
             <div>
                 <p>User</p>
-                <p>0</p>
+                <p class="user-score">0</p>
             </div>
             <div>
                 <p>CPU</p>
-                <p>0</p>
+                <p class="cpu-score">0</p>
             </div>
         </div>
         <div class="message">Choose an option</div>
